# agents-of-glass

./: .gitignore  1.txt  2.txt  3.txt  CLAUDE.md  Makefile  README.md  agents-of-glass.toml.example  clock-and-item-state-problem-brief.md  codex-findings.md  codex.md  future-run-watchlist.md  glass-command-surface.md  narration-voice-library-proposal.md  platform.yml  player-turn-type-pass-plan.md  pyproject.toml  reserved-professional-register-tracking.md  revengers-followup-tracker.md  runtime-state-db-direct.md  scene-clock-beat-tracking-proposal.md  tracking-code-review-findings.md  tracking-immediate-decisions.md
content/: README.md
docs/: backlog.md  post-prelude-followups.md
frontend/: eslint.config.js  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
migrations/: 001_characters.sql  002_rolls.sql  003_messages.sql  004_xp_levels.sql  005_skill_xp_and_logs.sql  006_runtime_state_and_turns.sql  007_durable_clocks.sql  008_character_consequences.sql  009_persistence_outputs_and_search.sql  010_creative_influences.sql  011_character_identity_fields.sql  012_search_embedding_metadata.sql  013_pgvector_search.sql  014_turn_end_metadata.sql  015_character_creation_texture_fields.sql  016_character_table_personality_fields.sql  017_active_turn_runtime_and_turn_type.sql  018_scene_clocks_beats_and_turn_audit.sql  019_scene_clock_polarity.sql  README.md
scripts/: aog-permset  deploy.sh  glass-api-client  provision-agents.sh  run-webui-local.sh  sync-claude-credentials.sh
templates/: README.md  summary.md
tests/: test_api_proxy.py  (+3 more)
(+873 files in other folders)
