[project]
name = "agents-of-glass"
version = "0.1.0"
description = "Closed-loop fully agentic TTRPG simulation"
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE.md" }
authors = [{ name = "Chris Arsenault" }]
dependencies = [
    "click>=8.1",       # CLI
    "psycopg[binary]>=3.1",  # Postgres
    "falkordb>=1.0",    # graph
    "pydantic>=2.0",    # selective data validation
    "rich>=13.0",       # readable terminal output
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.6",
]

[project.scripts]
glass = "cli.main:main"
aog = "orchestrator.main:main"

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
pythonpath = ["src"]
